crates/swc_ecma_parser/tests/test262-error-references/fail/4c1a7f94a43fddbd.js.stderr
error: Expected an octal digit
 --> $DIR/tests/test262-parser/fail/4c1a7f94a43fddbd.js:1:3
  |
1 | 0o
  |   ^

